--- a/mail Client/public/index.html
+++ b/mail Client/public/index.html
@@ -7,7 +7,12 @@
     <body>
         <div class="mailer-container">
             <div class="sidebar" id="sidebar">
+                <div class="header" id="header">
+                    
+                </div>
+                <div class="list" id="list">
 
+                </div>
             </div>
             <div class="preview-container" id="preview-container">
 
